--- a/WSUI.Infrastructure/Controls/ProgressManager/ProgressWindow.xaml
+++ b/WSUI.Infrastructure/Controls/ProgressManager/ProgressWindow.xaml
@@ -1,16 +1,14 @@
-﻿<Controls:MetroWindow x:Class="WSUI.Infrastructure.Controls.ProgressManager.ProgressWindow"
+﻿<Window x:Class="WSUI.Infrastructure.Controls.ProgressManager.ProgressWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" mc:Ignorable="d" 
              WindowStyle="None"
-                      WindowStartupLocation="CenterOwner"
-             ShowTitleBar="False"
-             ShowIconOnTitleBar="False"
-             ShowCloseButton="False" ShowInTaskbar="False" ShowMaxRestoreButton="False" ShowMinButton="False"
+            ResizeMode="NoResize"
+             ShowInTaskbar="False" 
              Height="250" Width="300" >
-    <Window.Resources>
+    <Window.Resources><!--Controls:MetroWindow-->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
@@ -30,4 +28,4 @@
         <TextBlock x:Name="textLabel"  Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24"/>
         <Controls:ProgressRing IsActive="True" Grid.Row="1"/>        
     </Grid>
-</Controls:MetroWindow>
+</Window>
