--- a/WSUI.Module/View/AllFilesDataView.xaml
+++ b/WSUI.Module/View/AllFilesDataView.xaml
@@ -50,7 +50,8 @@
             <TextBlock Grid.Column="6" Grid.Row="0" Grid.RowSpan="2" Margin="0 2 5 0" Text="{Binding Path=PageCount,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" 
                        VerticalAlignment="Center" />
 
-            <Button Command="{Binding MoveFirstCommand}"  Grid.Column="1" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Command="{Binding MoveFirstCommand}"  Grid.Column="1" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}">
                 <Button.Content>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -60,7 +61,8 @@
                     </Grid>
                 </Button.Content>
             </Button>
-            <Button Command="{Binding MovePreviousCommand}"  Grid.Column="2" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Command="{Binding MovePreviousCommand}"  Grid.Column="2" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}">
                 <Button.Content>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -70,7 +72,8 @@
                     </Grid>
                 </Button.Content>
             </Button>
-            <Button Command="{Binding MoveNextCommand}"  Grid.Column="4" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Command="{Binding MoveNextCommand}"  Grid.Column="4" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}">
                 <Button.Content>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -80,7 +83,8 @@
                     </Grid>
                 </Button.Content>
             </Button>
-            <Button Command="{Binding MoveLastCoommand}"  Grid.Column="5" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Command="{Binding MoveLastCoommand}"  Grid.Column="5" Grid.RowSpan="2" Width="24" Height="24" HorizontalAlignment="Center" VerticalAlignment="Center"
+                    IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}">
                 <Button.Content>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -117,6 +121,7 @@
                  ItemTemplateSelector="{StaticResource templateSelector}"
                  SelectedItem="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  ContextMenu="{StaticResource ResourceKey=contextMenu}"
+                 IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
                  >
             
         </ListBox>
