--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -37,11 +37,26 @@
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
                 <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  FontStyleLabel="Italic"
                                                        Margin="5 3 5 3"/>
-                <TextBlock Text="(" Margin="0 3 0 3"/>
                 <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"></TextBlock>
-                <TextBlock Text=")" Margin="0 3 0 3"/>
             </StackPanel>
-            <TextBlock Text="{Binding Path=Date,Converter={StaticResource dateConverter}}" Grid.Column="2" Margin="5" DockPanel.Dock="Right"/>
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" >
+                <!--<ctrl:HightliteTextBlock Text="{Binding Path=From}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  FontStyleLabel="Italic"
+                                                         Margin="5 3 5 3"/>-->
+                <ctrl:HightliteHyperlink Text="{Binding Path=From}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+                                                          Margin="5">
+                    <ctrl:HightliteHyperlink.Style>
+                        <Style TargetType="ctrl:HightliteTextBlockBase">
+                            <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Blue"/>
+                            <Style.Triggers>
+                                <Trigger Property="Control.IsMouseOver" Value="True">
+                                    <Setter Property="ctrl:HightliteTextBlockBase.ForegroundColor" Value="Red" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ctrl:HightliteHyperlink.Style>
+                </ctrl:HightliteHyperlink>
+                <TextBlock Text="{Binding Path=Date,Converter={StaticResource dateConverter}}" Grid.Column="2" Margin="5"/>
+            </StackPanel>
             <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                        Margin="5">
             </ctrl:HightliteTextBlock>
