updated: - Attachments: now we are searching in fields such as  System.ItemName  or System.Search.Contents; - added collapsing of duplicate file names; - updated email preview; -  People: implemented functionality what we did discuss in last Monday.

--- a/WSUI.Infrastructure/Controls/HightliteTextBlock.xaml
+++ b/WSUI.Infrastructure/Controls/HightliteTextBlock.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:WSUI.Infrastructure.Controls"
              >
     <DockPanel LastChildFill="True">
-        <TextBlock TextWrapping="Wrap"  x:Name="textBlock"   
+        <TextBlock TextTrimming="CharacterEllipsis"  x:Name="textBlock"   
                    
                         FontSize="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HightliteTextBlockBase}},Path=FontSizeLabel}"
                         FontStyle="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HightliteTextBlockBase}},Path=FontStyleLabel}" 
