--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -14,6 +14,7 @@
     </ResourceDictionary.MergedDictionaries>
 
     <service:DateToStringConverter x:Key="dateConverter" />
+    <service:CountToFormatStringConvert x:Key="countConverter" />
     
     <Style x:Key="ImageStyle" TargetType="{x:Type Image}">
         <Setter Property="Width"  Value="16"/>
@@ -29,7 +30,7 @@
             <StackPanel Orientation="Horizontal">
                 <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="1"   Margin="5"/>
-                <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
+                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
             </StackPanel>
         </DockPanel>
     </DataTemplate>
@@ -40,7 +41,7 @@
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
                 <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  FontStyleLabel="Italic"
                                                        Margin="5 3 5 3"/>
-                <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"></TextBlock>
+                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"></TextBlock>
             </StackPanel>
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" >
                 <!--<ctrl:HightliteTextBlock Text="{Binding Path=From}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  FontStyleLabel="Italic"
@@ -61,7 +62,7 @@
                 <TextBlock Text="{Binding Path=Date,Converter={StaticResource dateConverter}}" Grid.Column="2" Margin="5"/>
             </StackPanel>
             <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
-                                                       Margin="5">
+                                                       Margin="5" Width="300">
             </ctrl:HightliteTextBlock>
         </DockPanel>
     </DataTemplate>
@@ -93,7 +94,7 @@
             <StackPanel Orientation="Horizontal">
                 <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="1"   Margin="5"/>
-                <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
+                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
             </StackPanel>
         </DockPanel>
     </DataTemplate>
@@ -105,7 +106,7 @@
             <StackPanel Orientation="Horizontal">
                 <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="1"   Margin="5"/>
-                <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
+                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
             </StackPanel>
         </DockPanel>
     </DataTemplate>
@@ -117,7 +118,7 @@
             <StackPanel Orientation="Horizontal">
                 <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="1"   Margin="5"/>
-                <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
+                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
             </StackPanel>
         </DockPanel>
     </DataTemplate>
@@ -129,7 +130,7 @@
             <StackPanel Orientation="Horizontal">
                 <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="1"   Margin="5"/>
-                <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
+                <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"></TextBlock>
             </StackPanel>
         </DockPanel>
     </DataTemplate>
