--- a/WSUI.Module/View/EmailDataView.xaml
+++ b/WSUI.Module/View/EmailDataView.xaml
@@ -12,9 +12,9 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="..\Service\ResourceTemplate.xaml" />
-                <!--<ResourceDictionary Source="..\Themes\Generic.xaml" />-->
+                <!--<Resource   Dictionary Source="..\Themes\Generic.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
-
+            <service:CountToFormatStringConvert x:Key="countConverter" />
         </ResourceDictionary>
     </Controls:MetroContentControl.Resources>
     
@@ -34,9 +34,7 @@
                             <!--<TextBlock Text="{Binding Recepient}" FontWeight="Bold" Margin="5 3 5 3"/>-->
                             <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,ElementName=this}"  FontStyleLabel="Italic"
                                                        Margin="5 3 5 3"/>
-                            <TextBlock Text="(" Margin="0 3 0 3"/>
-                            <TextBlock Text="{Binding Count}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"></TextBlock>
-                            <TextBlock Text=")" Margin="0 3 0 3"/>
+                            <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"></TextBlock>
                         </StackPanel>
                         <TextBlock Text="{Binding Path=Date,Converter={StaticResource dateConverter}}" Grid.Column="2" Margin="5" DockPanel.Dock="Right"/>
                         <!--<TextBlock Text="{Binding Path=Name}" Grid.Column="1" Margin="5"/>-->
